--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,9 @@ code {
 
 
 .contentWrap{
-  height:100vh;
-  width:100vw;
-  position: absolute;
+  width:100%;
+  height:100%;
+  position:absolute;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -54,6 +54,7 @@ code {
   align-items: center;
   justify-content: center;
   z-index:3;
+  overflow-y:scroll;
 }
 
 /*HEADER CONTAINER*/
@@ -160,9 +161,9 @@ code {
   width:fit-content;
   height:auto;
   display:grid;
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: repeat(2,1fr);
   gap: 10px 10px;
-  margin-left:10px;
+  margin-inline:10px;
 }
 
 .inputDiv{
@@ -186,12 +187,16 @@ label{
 }
 
 input{
-  text-align: center;
+  display:flex;
+  justify-content: center;
+  align-items: center;
   grid-column: 2;
+  color:white;
+  text-align: center;
   align-self:center;
   width:100%;
   margin:0;
-  padding:0;
+  padding:5px;
   font-size:1.4rem;
   border:none;
   border-radius:10px;
@@ -199,6 +204,7 @@ input{
   appearance: none;
   -webkit-appearence:none;
   -moz-appearence: none;
+  background-color: rgba(255, 255, 255, 0.166);
 }
 
 input::-webkit-outer-spin-button,
@@ -208,14 +214,12 @@ input::-webkit-inner-spin-button {
 }
 
 .colorInput{
-width:80%;
-height:60%;
-border:1px black;
+width:40%;
+height:100%;
 cursor: pointer;
 overflow:hidden;
 background: none;
 margin:auto;
-box-shadow: 0 4px 30px rgba(0,0,0,0.3);
 }
 
 .fileInput {
@@ -246,6 +250,10 @@ box-shadow: 0 4px 30px rgba(0,0,0,0.3);
   background-color: rgb(255, 255, 255, .0);
 }
 
+::placeholder{
+  opacity:.7;
+  color:gray;
+}
 
 .reset{
   text-align: center;
